1.去除test目录 2.添加freemarker静态页面生成

--- a/healthmobile_web/src/main/resources/redis.properties
+++ b/healthmobile_web/src/main/resources/redis.properties
@@ -3,8 +3,9 @@ redis.maxIdle=5
 redis.maxWaitMillis=2000
 redis.testOnBorrow=true
 redis.host=204.44.85.50
+#redis.host=127.0.0.1
 redis.port=6700
-redis.timeout=0
+redis.timeout=30
 redis.password=test
 redis.testWhileIdle=true 
 redis.timeBetweenEvictionRunsMillis=30000  
