--- a/healthmobile_common/pom.xml
+++ b/healthmobile_common/pom.xml
@@ -27,6 +27,24 @@
             <artifactId>jedis</artifactId>
             <version>2.9.0</version>
         </dependency>
+
+      <!--  <dependency>
+            <groupId>com.lowagie</groupId>
+            <artifactId>itext</artifactId>
+            <version>2.1.7</version>
+        </dependency>-->
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>itextpdf</artifactId>
+            <version>5.5.13</version>
+        </dependency>
+
+        <!-- 导入iText报表，支持中文 -->
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>itext-asian</artifactId>
+            <version>5.2.0</version>
+        </dependency>
     </dependencies>
 
 
